fixed answer edit markdown preview regression and site selector dropdown text alignment

--- a/get/header.css
+++ b/get/header.css
@@ -21,8 +21,9 @@ header .select>div:last-child>div { position: absolute; z-index: 100; display: n
 header .select.open>div:last-child>div { display: flex; }
 header .select>div:last-child>div>hr { width: 100%; }
 header .select>div:last-child>div>div { display: flex; }
+header .select>div:last-child>div>div:not(:last-child) { border-bottom: 1px solid lightgray; }
 header .select>div:last-child>div>div:hover { background: rgb(var(--rgb-light)); }
-header .select>div:last-child>div>div>a { color: black; padding: 4px; }
-header .select>div:last-child>div>div>div+a { flex: 1 0 auto; padding-right: 75px; }
-header .select>div:last-child>div>div>a:not(:first-of-type) { font-size: 12px; }
+header .select>div:last-child>div>div>a { color: black; line-height: 28px; }
+header .select>div:last-child>div>div>a:not(:first-of-type) { font-size: 12px; padding-right: 4px; }
+header .select>div:last-child>div>div>div+a { flex: 1 0 auto; padding-right: 75px; padding-left: 4px; text-decoration: none; }
 header .select>div:last-child>div>div:not(:hover)>a:not(:first-of-type) { visibility: hidden; }
